--- a/04_JS_var_flode_DOM/04_Kurs_Kod/Lena_Ovning/websiteOvning.html
+++ b/04_JS_var_flode_DOM/04_Kurs_Kod/Lena_Ovning/websiteOvning.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/websiteOvning.css">
 </head>
-<body>
-    <h1>05_JS_var_flode_DOM</h1>
+<body id="body">
     
 
-    <script src="script/script.js"></script>
+    <script src="script/websiteOvning.js"></script>
 </body>
 </html>
