--- a/09_Objekt_Array_List/Lena_Ovning/index.html
+++ b/09_Objekt_Array_List/Lena_Ovning/index.html
@@ -9,6 +9,11 @@
 <body>
     <h1>09_Objekt_Array_List</h1>
 
+    <button type="button" id="button1" onclick="">Button 1</button>
+    <button type="button" id="button2" onclick="">Button 2</button>
+    <input type="range" id="slider" min="0" max="100" value="5" onchange="changeMatrixSize();">
+
     <script src="js/script.js"></script>
+    <!-- <script src="js/OvningUppgifter.js"></script> -->
 </body>
 </html>
